I spelled “Taiyaki” wrong 🤦

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tayaki-Talky</title>
+    <title>Taiyaki-Talky</title>
     <link rel="stylesheet" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -22,7 +22,7 @@
       </div>
     </div>
     <nav class="flex">
-      <h1>🐟 Tayaki-Talky</h1>
+      <h1>🐟 Taiyaki-Talky</h1>
       <span class="flex">
         <span id="mic_indicator"></span>
         <span id="mic_name"></span>
