Make it installable, fix minor UI bugs
This commit makes Taiyaki-Talky installable as a Progressive Web App. With this change, users don’t need to keep the Redbean server running once they’ve installed the PWA—everything will keep working client-side.

It also resolves some minor UI issues related to smooth scrolling the transcript into place and failing to insert newlines after silent periods.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Taiyaki-Talky</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="manifest" href="/tt.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#327da8" />
   </head>
   <body class="flex">
     <div class="flex ts-wrap">
@@ -29,6 +31,6 @@
       </span>
       <button id="toggle_captioning">Start Captioning</button>
     </nav>
-    <script type="module" src="tt.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
